--- a/MechApp/account.html
+++ b/MechApp/account.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div class="dashboard">
@@ -56,8 +57,8 @@
                                 <span id="userEmail">Loading...</span>
                             </div>
                             <div class="info-item">
-                                <label>Member Since:</label>
-                                <span id="memberSince">Loading...</span>
+                                <label>Phone:</label>
+                                <span id="userPhone">Not specified</span>
                             </div>
                         </div>
                     </div>
@@ -97,11 +98,16 @@
                         <i class="fas fa-arrow-left"></i>
                         Back to Services
                     </button>
+                    <button id="deleteAccountBtn" class="btn-danger">
+                        <i class="fas fa-trash"></i>
+                        Delete Account
+                    </button>
                 </div>
             </div>
         </main>
     </div>
     
+    <script src="supabase-config.js"></script>
     <script src="script.js"></script>
     <script src="account.js"></script>
 </body>
